# autodock-openmp

./: CMakeLists.txt  README
autodock/: .Makefile.swp  .eval.cc.swp  .main.cc.swo  .support.cc.swp  .support.h.swp  Makefile.am  Makefile.in  Makefile.in.bkp  autoglobal.h  call_glss.cc  configure  eintcal.cc  eval.cc  gs.cc  hybrids.h  main.cc  main.cc.bkp  mapping.cc  penmp  ranlib.cc  ranlib.h  read_parameter_library.cc  setflags.cc  support.cc  torsion.cc  trilinterp.cc
autodock/autom4te.cache/: output.0  requests  traces.0  traces.1
autogrid/: Makefile  autogrid4  config.status  default_parameters.h  setflags.cpp
